2001-09-13  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.h,etc: Added get_std_delay() for standard frame delay.
	FPS is read from config file ("config/video/fps").

2001-09-14  Dancer Vesperman  <dancer@users.sourceforge.net>

	* gamewin.cc: Fixed spelling error in output text.

2001-09-13  Tristan Tarrant <nadir@users.sourceforge.net>
	* game.cc: make menu more compact when entries are missing
	* data/quotes.txt: added a quote by Max

2001-09-12  Jeff Freedman  <jeff@amy.nerble.net>

	* siintrinsics.h,intrinsics.cc:  Added (a guess) init_conversation().

	* actors.cc,monstinf.h:  Don't create body if 'has_no_body()'.

2001-09-10  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: If can't walk to target, wander a bit.
	* actors.cc:  Only call 'equipped' usecode for a few items in
	Black Gate.
	* egg.cc:  Teleport eggs are flagged as 'solid', and you now have
	to be at the exact lift to trigger one.

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* mapedit/studio.cc: More reliable getcwd. Prevent crashes if cancelling 'open static'

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* mapedit/(studio files). G++ v3 compilation: Standards and
		namespaces. Recast unsigned char* to char*

2001-09-10  Jeff Freedman  <jeff@amy.nerble.net>

	* several:  Map_chunk::find_spot() replaces find_unblocked_tile().

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* Take our own advice and clear streams between attempted
		file opens. Otherwise, we can succeed in opening
		the file, and still throw a file-not-found. Duh.

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* stdio.h doesn't declare snprintf in std::, but cstdio does.

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* uccparse.o depends on ucclex.c being created first.

2001-09-09  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Party_near uses same test as avatar_near.
	* actors.cc: Shields can go in shield spot (SI).
